[package]
name = "radiant-utils"
version = "0.3.0"
authors = ["Dennis Möhlmann <dmo479@gmail.com>"]
description = "Radiant example code support library"
documentation = "https://docs.rs/radiant-utils/"
repository = "https://github.com/sinesc/radiant-utils.git"
license = "MIT"

[dependencies]
radiant-rs = { version = "0.13" }
num-traits = "0.1"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[features]
serialize-serde = [ "serde", "serde_derive" ]